@@ -1,4 +1,5 @@
 current:
+  * add support for binary symbol data
   * fix zbarimg b&w format handling
   * fix scan (image) boundary QZ handling (bug #2807538)
     - add linear scanner manual flush API
